# assignment2-systems

./: pyproject.toml
cs336-basics/: pyproject.toml
cs336_systems/benchmarks/: benchmarking_script.py
results/benchmarking_script/: 2.7b_forward_backward_ctx128.json  2.7b_forward_ctx128.json  large_forward_backward_ctx128.json  large_forward_ctx128.json  medium_forward_backward_ctx128.json  medium_forward_ctx128.json  small_forward_backward_ctx128.json  small_forward_ctx128.json  xl_forward_backward_ctx128.json  xl_forward_ctx128.json
